--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
     <div class="card m-2 shadow-sm" style="">
         <!-- <img src="" class="card-img-top" alt="..."> -->
