--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -8,18 +9,24 @@
         <div class="card-body align-items-center align-content-center">
             <h5 class="card-title">Авторизация</h5>
             <!-- <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6> -->
-            <form method="post">
+            <form class="form-horizontal" action="{% url 'auth:login' %}" method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
 
-                <!-- {{ form.username }}
-                {{ form.password }} -->
                 <div class="d-grid">
                     <button class="btn btn-primary d-block"
                             type="submit" role="button">Войти
                     </button>
                 </div>
             </form>
+            <span>Регистрация</span><br>
+            <div class="d-grid gap-2">
+                <a class="btn btn-outline-secondary btn-sm " href="{% url 'auth:register' 'applicant' %}"
+                   role="button">Соискателя</a>
+                <a class="btn btn-outline-secondary btn-sm " href="{% url 'auth:register' 'company' %}"
+                   role="button">Работодателя</a>
+            </div>
+
         </div>
     </div>
 
