--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarId">
                 <div class="navbar-nav flex-row flex-wrap flex-grow">
-                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Главная</a>
                     <a class="nav-link " aria-current="page" href="#">Новости</a>
                     <a class="nav-link " aria-current="page" href="#">Правила портала</a>
                 </div>
