login/logout and registration done

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,10 @@
     {% include 'header.html' %}
 {% endblock %}
 
-{% block content %}
-{% endblock %}
+<div id="main" class="mx-5">
+    {% block content %}
+    {% endblock %}
+</div>
 
 {% block footer %}
 {% endblock %}
