--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div id="header">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
-        <div class="container-fluid">
+        <div class="container-fluid mx-5">
             <div id="logo" class="text-center align-middle">
                 <span class="align-middle fw-bold text-light">GB</span>
                 <!-- <a class="navbar-brand text-center p-0 fs-3"  href="#">GB</a> -->
@@ -11,13 +11,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarId">
                 <div class="navbar-nav flex-row flex-wrap flex-grow">
-                    <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Главная</a>
-                    <a class="nav-link " aria-current="page" href="#">Новости</a>
-                    <a class="nav-link " aria-current="page" href="#">Правила портала</a>
+                    {#                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page"#}
+                    {#                       href="{% url 'main' %}">Главная</a>#}
+                    <a class="nav-link {% if request.path == '/news/' or request.path == '/' %}active{% endif %}"
+                       aria-current="page" href="{% url 'main' %}">Новости</a>
+                    <a class="nav-link {% if request.path == '/rules/' %}active{% endif %}" aria-current="page"
+                       href="{% url 'rules' %}">Правила портала</a>
                 </div>
             </div>
             {#            <a class="btn btn-outline-secondary btn-sm" href="/auth/account/login/" role="button">Войти</a>#}
-            <a class="btn btn-outline-secondary btn-sm" href="{% url 'auth:login' %}" role="button">Войти</a>
+            {% if request.user.is_authenticated %}
+                {#                <a class="btn btn-outline-secondary btn-sm" href="">{{ request.user }}</a>#}
+                <div class="dropdown">
+                    <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ request.user }}
+                    </a>
+
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Личный кабинет</a></li>
+                        <li><a class="dropdown-item" href="{% url 'auth:logout' %}">Выход</a></li>
+                        {#                        <li><a class="dropdown-item" href="#">Something else here</a></li>#}
+                    </ul>
+                </div>
+            {% else %}
+                <a class="btn btn-outline-light btn-sm" href="{% url 'auth:login' %}" role="button">Войти</a>
+
+            {% endif %}
         </div>
     </nav>
 </div>
