--- a/templates/main.html
+++ b/templates/main.html
@@ -5,20 +5,22 @@
     <div class="card m-2 shadow-sm" style="">
         <!-- <img src="" class="card-img-top" alt="..."> -->
         <div class="card-body">
-            <h5 class="card-title">Новость первая</h5>
-            <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <h5 class="card-title">С 8 марта, дамы!</h5>
+            <h6 class="card-subtitle mb-2 text-muted ">08.03.2021</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias architecto
+                atque cum dignissimos dolor, dolorum eaque facilis harum ipsum laboriosam modi odio qui repellat
+                suscipit ullam, unde voluptates voluptatibus!</p>
             b5
         </div>
     </div>
     <div class="card m-2 shadow-sm" style="">
         <!-- <img src="" class="card-img-top" alt="..."> -->
         <div class="card-body">
-            <h5 class="card-title">Новость вторая</h5>
-            <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+            <h5 class="card-title">Мы открылись!</h5>
+            <h6 class="card-subtitle mb-2 text-muted ">08.03.2021</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam culpa cum delectus
+                dolor earum eius id illo in ipsam, magnam modi quas quis similique suscipit unde velit veritatis
+                vitae!</p>
             b5
         </div>
     </div>
