company lk href

--- a/templates/header.html
+++ b/templates/header.html
@@ -29,7 +29,12 @@
                     </a>
 
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Личный кабинет</a></li>
+                        {# Лк работодателя #}
+                        {% if user.is_staff %}
+                            <li><a class="dropdown-item" href="{% url 'lk:view' %}">Личный кабинет</a></li>
+                        {% else %}
+                            <li><a class="dropdown-item" href="{#% url 'lk:view' %#}">Личный кабинет</a></li>
+                        {% endif %}
                         <li><a class="dropdown-item" href="{% url 'auth:logout' %}">Выход</a></li>
                         {#                        <li><a class="dropdown-item" href="#">Something else here</a></li>#}
                     </ul>
