--- a/Vacancy/templates/vacancy/base.html
+++ b/Vacancy/templates/vacancy/base.html
@@ -6,10 +6,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/main.css">
 
     <title>Hello, world!</title>
 </head>
 <body>
+{% include 'header.html' %}
 <div class="container">
     <h3>{{ title }}</h3>
     {% block content %}
