--- a/personalareaapp/templates/personalareaapp/base.html
+++ b/personalareaapp/templates/personalareaapp/base.html
@@ -10,6 +10,7 @@
     </title>
     {% block css %}
         <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
     {% endblock %}
     {% block js %}
         <script src="{% static 'js/bootstrap.js' %}"></script>
@@ -19,6 +20,7 @@
 
 
 <div id="page">
+    {% include 'header.html' %}
     <div class="wrapper" id="header">
         <div class="container">
             <div class="header__logo"></div>
@@ -30,12 +32,12 @@
 
     <div class="wrapper" id="page-title">
         <div class="container">
-{#                        <div class="d-flex align-items-center p-3 my-3 bg-purple rounded shadow-sm">#}
-{#                            <div class="lh-1 d-flex justify-content-between">#}
-{#                                <h1 class="h6 mb-0 lh-1">Личный кабинет пользователя {{ user.name|title }}</h1>#}
-{#                                <a class="btn btn-outline-secondary" href="#">Редактировать данные</a>#}
-{#                            </div>#}
-{#                        </div>#}
+            {#                        <div class="d-flex align-items-center p-3 my-3 bg-purple rounded shadow-sm">#}
+            {#                            <div class="lh-1 d-flex justify-content-between">#}
+            {#                                <h1 class="h6 mb-0 lh-1">Личный кабинет пользователя {{ user.name|title }}</h1>#}
+            {#                                <a class="btn btn-outline-secondary" href="#">Редактировать данные</a>#}
+            {#                            </div>#}
+            {#                        </div>#}
             <div class="pt-2 pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between align-items-center">
                     <strong class="text-gray-dark">Личный кабинет пользователя {{ user.name|title }}</strong>
