--- a/personalareaapp/templates/personalareaapp/base.html
+++ b/personalareaapp/templates/personalareaapp/base.html
@@ -41,7 +41,7 @@
             <div class="pt-2 pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between align-items-center">
                     <strong class="text-gray-dark">Личный кабинет пользователя {{ user.name|title }}</strong>
-                    <a class="mt-2 btn btn-outline-secondary" href="#">Редактировать данные</a>
+                    {#                    <a class="mt-2 btn btn-outline-secondary" href="#">Редактировать данные</a>#}
                 </div>
             </div>
         </div>
