fix urls vacancy

--- a/personalareaapp/templates/personalareaapp/pa_content.html
+++ b/personalareaapp/templates/personalareaapp/pa_content.html
@@ -63,7 +63,7 @@
         {#        {% empty %}#}
         {#            <p class="lead">Пока нет вакансий</p>#}
         {#        {% endfor %}#}
-        <a class="btn btn-outline-secondary" href="{% url 'vacancy:vacancy_create' %}">Создать</a>
+        <a class="btn btn-outline-secondary" href="{% url 'personalarea:vacancy_create' %}">Создать</a>
     </div>
 
     {#    <div class="my-3 p-3 bg-body rounded shadow-sm">#}
