Изменил {% url 'lk:view' %} строка 37

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarId">
                 <div class="navbar-nav flex-row flex-wrap flex-grow">
-                    {#                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page"#}
+                    {#                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page" #}
                     {#                       href="{% url 'main' %}">Главная</a>#}
                     <a class="nav-link {% if request.path == '/news/' or request.path == '/' %}active{% endif %}"
                        aria-current="page" href="{% url 'main' %}">Новости</a>
@@ -34,7 +34,7 @@
                             <li><a class="dropdown-item" href="{% url 'lk:view' %}">Личный кабинет</a></li>
                         {% else %}
                             {# Лк соискателя #}
-                            <li><a class="dropdown-item" href="{% url 'lk:view' %}">Личный кабинет</a></li>
+                            <li><a class="dropdown-item" href="{% url 'applicant:view' %}">Личный кабинет</a></li>
                         {% endif %}
                         <li><a class="dropdown-item" href="{% url 'auth:logout' %}">Выход</a></li>
                         {#                        <li><a class="dropdown-item" href="#">Something else here</a></li>#}
