--- a/resume/templates/resume/resume_confirm_delete.html
+++ b/resume/templates/resume/resume_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'resume/base.html' %}
+{% extends 'applicantapp/base.html' %}
 
 {% block content %}
     <div class="row">
@@ -13,8 +13,8 @@
                         <form action="{% url 'resume:resume_delete' object.pk %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger waves-effect waves-light">Удалить</button>
-                            <button class="btn btn-blue-grey waves-effect waves-light">
-                                <a href="{% url 'resume:resume_list' %}" style="color: #fff">Отмена</a>
+                            <button class="btn btn-danger waves-effect waves-light">
+                                <a href="{% url 'applicant:view' %}">Отмена</a>
                             </button>
                         </form>
                     </div>
