--- a/resume/templates/resume/resume_form.html
+++ b/resume/templates/resume/resume_form.html
@@ -1,4 +1,4 @@
-{% extends 'personalareaapp/base.html' %}
+{% extends 'applicantapp/base.html' %}
 
 {% block content %}
     <div class="row">
@@ -12,6 +12,7 @@
                             <button id="submit" type="submit"
                                     class="btn btn-primary w-md waves-effect waves-light">Сохранить
                             </button>
+                            <a href="{% url 'applicant:view'%}">Отмена</a>
                         </div>
                     </form>
                 </div>
