some small things

--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -26,7 +26,7 @@
                    <tr>
                        <th>#</th>
                        <th>Название</th>
-                       <th>Описание</th>
+                       <th>Комментарий</th>
                        <th>Черновик</th>
                        <th>Действия</th>
                    </tr>
