--- a/resume/templates/resume/resume_confirm_delete.html
+++ b/resume/templates/resume/resume_confirm_delete.html
@@ -13,8 +13,7 @@
                         <form action="{% url 'resume:resume_delete' object.pk %}" method="post">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger waves-effect waves-light">Удалить</button>
-                            <button class="btn btn-danger waves-effect waves-light">
-                                <a href="{% url 'applicant:view' %}">Отмена</a>
+                            <button type="reset" onclick="location.href='{% url 'applicant:view' %}'" class="btn btn-secondary waves-effect waves-light">Отмена</button>
                             </button>
                         </form>
                     </div>
