--- a/Vacancy/templates/vacancy/vacancy_detail.html
+++ b/Vacancy/templates/vacancy/vacancy_detail.html
@@ -14,6 +14,9 @@
                         <a href="#" class="text-decoration-none text-white">Откликнуться</a>
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
+                        <a href="{% url 'main:main_list' %}" class="text-dark">Назад</a>
+                    </button>
+                    <button class="btn btn-light w-md waves-effect waves-light border-secondary">
                         <a href="#" class="text-dark"><i class="far fa-star"></i></a>
                     </button>
                 </div>
