Перенос шаблонов. Исправление ссылок на них.

--- a/applicantapp/templates/applicantapp/base.html
+++ b/applicantapp/templates/applicantapp/base.html
@@ -20,7 +20,7 @@
 
 
 <div id="page">
-    {% include 'header.html' %}
+    {% include 'mainapp/header.html' %}
     <div class="wrapper" id="header">
         <div class="container">
             <div class="header__logo"></div>
@@ -64,6 +64,6 @@
         {% endblock %}
     </div>
 </div>
-
+{% include 'mainapp/footer.html' %}
 </body>
 </html>
