--- a/personalareaapp/templates/personalareaapp/base.html
+++ b/personalareaapp/templates/personalareaapp/base.html
@@ -21,7 +21,7 @@
 
 
 <div id="page">
-    {% include 'header.html' %}
+    {% include 'mainapp/header.html' %}
     <div class="wrapper" id="header">
         <div class="container">
             <div class="header__logo"></div>
@@ -70,8 +70,6 @@
         {% endblock %}
     </div>
 </div>
-
-{#    {% include 'gbfp/include/inc_footer.html' %}#}
-</div>
+{% include 'mainapp/footer.html' %}
 </body>
 </html>
