--- a/resume/templates/resume/base.html
+++ b/resume/templates/resume/base.html
@@ -11,13 +11,14 @@
     <title>Hello, world!</title>
 </head>
 <body>
-{% include 'header.html' %}
+{% include 'mainapp/header.html' %}
 <div class="container">
     <h3>{{ title }}</h3>
     {% block content %}
 
     {% endblock %}
 </div>
+{% include 'mainapp/footer.html' %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
