--- a/mainapp/templates/mainapp/rules.html
+++ b/mainapp/templates/mainapp/rules.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'mainapp/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -10,7 +10,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias architecto
                 atque cum dignissimos dolor, dolorum eaque facilis harum ipsum laboriosam modi odio qui repellat
                 suscipit ullam, unde voluptates voluptatibus!</p>
-            b5
+
         </div>
     </div>
 {% endblock %}
