--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -1,4 +1,4 @@
-{% extends 'personalareaapp/base.html' %}
+{% extends 'companyapp/base.html' %}
 
 {% block content %}
     <div class="col-12 h-100">
