--- a/vacancyapp/templates/vacancyapp/vacancy_form.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_form.html
@@ -10,7 +10,7 @@
                         {{ form.as_p }}
                         <div class="form-button">
                             <button id="submit" type="submit"
-                                    class="btn btn-primary w-md waves-effect waves-light">Сохранить
+                                    class="btn btn-primary w-md waves-effect waves-light">Отправить на проверку
                             </button>
                         </div>
                     </form>
