--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -25,7 +25,6 @@
                 <tr>
                     <th>#</th>
                     <th>Название</th>
-                    <th>Описание</th>
                     <th>Действия</th>
                 </tr>
                 </thead>
@@ -33,8 +32,7 @@
                 {% for vacancy in vacancies_list %}
                     <tr>
                         <td>{{ vacancy.id }}</td>
-                        <td>{{ vacancy.name }}</td>
-                        <td>{{ vacancy.description }}</td>
+                        <td>{{ vacancy.vacancy_name }}</td>
                         <td>
                             <a href="{% url 'vacancy:vacancy_detail' vacancy.pk %}"
                                class="text-muted"><i class="fas fa-eye"></i></a>
