--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -4,10 +4,12 @@
     <div class="col-12 h-100">
         <div class="col-6">
             <div class="mt-3">
-                <h3>{{ object.name }}
-                    {% if object.draft %}<h6 class="text-danger">Черновик</h6>{% endif %}
-                </h3>
+                <h3>{{object.vacancy_name}}</h3>
                 <p><a href="#" class="text-decoration-none">{{ object.company.company_name }}</a></p>
+
+                <p> {{object.description}}</p>
+                <p> {{object.salary}}</p>
+
                 {# TODO привязать ссылку на детальную информацию о компании #}
                 <div class="form-button mt-4">
                     <button class="btn btn-success w-md waves-effect waves-light">
