--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -5,7 +5,7 @@
         <div class="col-6">
             <div class="mt-3">
                 <h3>{{object.vacancy_name}}</h3>
-                <p><a href="#" class="text-decoration-none">{{ object.company.company_name }}</a></p>
+                <p><a href="{% url 'company:company_detail' object.company.id %}" class="text-decoration-none">{{ object.company.company_name }}</a></p>
 
                 <p> {{object.description}}</p>
                 <p> {{object.salary}}</p>
