--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -25,6 +25,8 @@
                 <tr>
                     <th>#</th>
                     <th>Название</th>
+                    <th>Черновик</th>
+                    <th>Опубликована</th>
                     <th>Действия</th>
                 </tr>
                 </thead>
@@ -33,6 +35,8 @@
                     <tr>
                         <td>{{ vacancy.id }}</td>
                         <td>{{ vacancy.vacancy_name }}</td>
+                        <td> {% if vacancy.is_draft %} Да {% else %} Нет {% endif %}</td>
+                        <td> {% if vacancy.is_active %} Да {% else %} Нет {% endif %}</td>
                         <td>
                             <a href="{% url 'vacancy:vacancy_detail' vacancy.pk %}"
                                class="text-muted"><i class="fas fa-eye"></i></a>
