--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -4,12 +4,13 @@
     <div class="col-12 h-100">
         <div class="col-6">
             <div class="mt-3">
-                <h3>{{object.vacancy_name}}</h3>
+                <h2>{{object.vacancy_name}}</h2>
                 <p><a href="{% url 'company:company_detail' object.company.id %}" class="text-decoration-none">{{ object.company.company_name }}</a></p>
-
+                <h5>Описание вакансии</h5>
                 <p> {{object.description}}</p>
+                <h5>Заработная плата</h5>
                 <p> {{object.salary}}</p>
-
+                <p class="mt-5">Вакансия создана {{ object.created_at }}</p>
                 {# TODO привязать ссылку на детальную информацию о компании #}
                 <div class="form-button mt-4">
                     <button class="btn btn-success w-md waves-effect waves-light">
@@ -22,9 +23,7 @@
                         <a href="#" class="text-dark"><i class="far fa-star"></i></a>
                     </button>
                 </div>
-                <h5 class="mt-5 mb-0">Описание:</h5>
-                <p>{{ object.description }}</p>
-                <p class="mt-5">Вакансия создана {{ object.created }}</p>
+
             </div>
         </div>
     </div>
