--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -53,16 +53,30 @@
         </div>
         <div class="my-3 p-3 bg-body rounded shadow-sm">
         <h6 class="border-bottom pb-2 mb-0">Мои предложения</h6>
-           {% if not pa_responces %}
+           {% if not responses_list %}
             <p class="lead">Пока нет предложений</p>
            {% else %}
-                {% for item in pa_proposal %}
-                    <div class="d-flex text-muted pt-3">
-                        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                            <div>{{ item }}</div>
-                        </div>
-                    </div>
-                {% endfor %}
+                <table class="table table-striped dt-responsive nowrap table-vertical" width="100%"
+                      cellspacing="0">
+               <thead>
+                   <tr>
+                       <th>#</th>
+                       <th>Резюме</th>
+                       <th>Компания</th>
+                   </tr>
+               </thead>
+               <tbody>
+                   {% for item in responses_list %}
+                       {% if item.resume %}
+                           <tr>
+                               <td>{{ item.id }}</td>
+                               <td>{{ item.resume.resume_name }}</td>
+                               <td><a href="{% url 'company:company_detail' item.user.id %}" class="text-decoration-none">{{ item.user.company_name }}</a></td>
+                           </tr>
+                       {% endif %}
+                   {% endfor %}
+               </tbody>
+               </table>
         {% endif %}
         </div>
 {% endblock %}
