changes to main page, separate news and vacancy/resume list

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -16,7 +16,7 @@
     {% include 'mainapp/header.html' %}
 {% endblock %}
 
-<div id="main" class="mx-5">
+<div id="main" class="">
     {% block content %}
     {% endblock %}
 </div>
