--- a/resumeapp/templates/resumeapp/resume_detail.html
+++ b/resumeapp/templates/resumeapp/resume_detail.html
@@ -32,7 +32,7 @@
                         <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Пригласить</a>
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
-                        <a href="{% url 'main:main_list' %}" class="text-dark">Назад</a>
+                        <a href="{% url 'main:vac_res_list' %}" class="text-dark">Назад</a>
                     </button>
                 </div>
                 <p class="mt-4">Резюме создано {{ object.created_at }}</p>
