Изменение кнопки приглашения, если оно уже есть

--- a/resumeapp/templates/resumeapp/resume_detail.html
+++ b/resumeapp/templates/resumeapp/resume_detail.html
@@ -29,7 +29,11 @@
                 <p> {{object.languages}}</p>
                 <div class="form-button mt-4">
                     <button class="btn btn-success w-md waves-effect waves-light">
+                        {% if in_responses %}
+                        <a class="text-decoration-none text-white">Приглашен</a>
+                        {% else %}
                         <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Пригласить</a>
+                        {% endif %}
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
                         <a href="{% url 'main:vac_res_list' %}" class="text-dark">Назад</a>
